<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ManualControlDialogVFE</class>
 <widget class="QWidget" name="ManualControlDialogVFE">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>816</width>
    <height>588</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_5">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QGroupBox" name="groupBox_10">
         <property name="title">
          <string>Signal Generation</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
             <widget class="QGroupBox" name="groupBox">
              <property name="title">
               <string>Source</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_10">
               <item>
                <widget class="QCheckBox" name="SourceCE">
                 <property name="text">
                  <string>Chip Enable</string>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="SourceRFEN">
                 <property name="text">
                  <string>RF Enable</string>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="SourceLocked">
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
                 <property name="text">
                  <string>Locked</string>
                 </property>
                </widget>
               </item>
               <item>
                <layout class="QFormLayout" name="formLayout">
                 <item row="0" column="0">
                  <widget class="QLabel" name="label_2">
                   <property name="text">
                    <string>Frequency:</string>
                   </property>
                  </widget>
                 </item>
                 <item row="0" column="1">
                  <widget class="SIUnitEdit" name="SourceFrequency"/>
                 </item>
                </layout>
               </item>
              </layout>
             </widget>
            </item>
           </layout>
          </item>
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_12">
            <item>
             <widget class="QGroupBox" name="groupBox_4">
              <property name="title">
               <string>Attenuator</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_4">
               <item>
                <widget class="QDoubleSpinBox" name="Attenuator">
                 <property name="suffix">
                  <string>db</string>
                 </property>
                 <property name="minimum">
                  <double>-31.750000000000000</double>
                 </property>
                 <property name="maximum">
                  <double>0.000000000000000</double>
                 </property>
                 <property name="singleStep">
                  <double>0.250000000000000</double>
                 </property>
                </widget>
               </item>
              </layout>
             </widget>
            </item>
            <item>
             <widget class="QGroupBox" name="groupBox_5">
              <property name="title">
               <string>Amplifier</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_11">
               <item>
                <widget class="QCheckBox" name="SourceAmplifier1Enable">
                 <property name="text">
                  <string>Enable Amp1</string>
                 </property>
                 <property name="checked">
                  <bool>false</bool>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="SourceAmplifier2Enable">
                 <property name="text">
                  <string>Enable Amp2</string>
                 </property>
                </widget>
               </item>
              </layout>
             </widget>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox_11">
         <property name="title">
          <string>Signal Analysis</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QGroupBox" name="groupBox_7">
            <property name="title">
             <string>LO</string>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0">
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_5">
               <item>
                <widget class="QCheckBox" name="LOCE">
                 <property name="text">
                  <string>Chip Enable</string>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="LORFEN">
                 <property name="text">
                  <string>RF Enable</string>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="LOlocked">
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
                 <property name="text">
                  <string>Locked</string>
                 </property>
                </widget>
               </item>
               <item>
                <layout class="QFormLayout" name="formLayout_3">
                 <item row="0" column="0">
                  <widget class="QLabel" name="label_8">
                   <property name="text">
                    <string>Freq. Type:</string>
                   </property>
                  </widget>
                 </item>
                 <item row="0" column="1">
                  <widget class="QComboBox" name="LOFreqType">
                   <item>
                    <property name="text">
                     <string>IF</string>
                    </property>
                   </item>
                   <item>
                    <property name="text">
                     <string>Absolute</string>
                    </property>
                   </item>
                  </widget>
                 </item>
                 <item row="1" column="0">
                  <widget class="QLabel" name="label_7">
                   <property name="text">
                    <string>Frequency:</string>
                   </property>
                  </widget>
                 </item>
                 <item row="1" column="1">
                  <widget class="SIUnitEdit" name="LOFrequency">
                   <property name="enabled">
                    <bool>false</bool>
                   </property>
                  </widget>
                 </item>
                 <item row="2" column="0">
                  <widget class="QLabel" name="label_6">
                   <property name="text">
                    <string>IF1:</string>
                   </property>
                  </widget>
                 </item>
                 <item row="2" column="1">
                  <widget class="SIUnitEdit" name="IF"/>
                 </item>
                </layout>
               </item>
              </layout>
             </item>
            </layout>
           </widget>
          </item>
          <item>
           <widget class="QGroupBox" name="groupBox_9">
            <property name="title">
             <string>Aquisition</string>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
             <item>
              <widget class="QCheckBox" name="Port1Enable">
               <property name="text">
                <string>Port  Enable</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QCheckBox" name="RefEnable">
               <property name="text">
                <string>Reference Enable</string>
               </property>
              </widget>
             </item>
             <item>
              <layout class="QFormLayout" name="formLayout_5">
               <item row="0" column="1">
                <widget class="QComboBox" name="portgain">
                 <item>
                  <property name="text">
                   <string>1V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>10V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>20V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>30V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>40V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>60V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>80V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>120V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>157V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>0.25V/V</string>
                  </property>
                 </item>
                </widget>
               </item>
               <item row="1" column="1">
                <widget class="QComboBox" name="refgain">
                 <item>
                  <property name="text">
                   <string>1V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>10V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>20V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>30V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>40V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>60V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>80V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>120V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>157V/V</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>0.25V/V</string>
                  </property>
                 </item>
                </widget>
               </item>
               <item row="2" column="0">
                <widget class="QLabel" name="label_12">
                 <property name="text">
                  <string>Samples:</string>
                 </property>
                </widget>
               </item>
               <item row="2" column="1">
                <widget class="QSpinBox" name="Samples">
                 <property name="minimum">
                  <number>96</number>
                 </property>
                 <property name="maximum">
                  <number>16384</number>
                 </property>
                 <property name="singleStep">
                  <number>16</number>
                 </property>
                 <property name="value">
                  <number>16384</number>
                 </property>
                </widget>
               </item>
               <item row="3" column="0">
                <widget class="QLabel" name="label_15">
                 <property name="text">
                  <string>Window:</string>
                 </property>
                </widget>
               </item>
               <item row="3" column="1">
                <widget class="QComboBox" name="cbWindow">
                 <item>
                  <property name="text">
                   <string>None</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>Kaiser</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>Hann</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>Flat Top</string>
                  </property>
                 </item>
                </widget>
               </item>
               <item row="1" column="0">
                <widget class="QLabel" name="label_4">
                 <property name="text">
                  <string>Reference PGA gain:</string>
                 </property>
                </widget>
               </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_3">
                 <property name="text">
                  <string>Port PGA gain:</string>
                 </property>
                </widget>
               </item>
              </layout>
             </item>
            </layout>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox_3">
         <property name="title">
          <string>eCal</string>
         </property>
         <layout class="QFormLayout" name="formLayout_4">
          <item row="1" column="0">
           <widget class="QLabel" name="label_9">
            <property name="text">
             <string>Target temperature:</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
           <widget class="SIUnitEdit" name="eCalTarget"/>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_10">
            <property name="text">
             <string>State:</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QComboBox" name="eCalState">
            <item>
             <property name="text">
              <string>Port</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Open</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Short</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Load</string>
             </property>
            </item>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_12">
       <property name="title">
        <string>Measurements</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_16">
        <item>
         <widget class="QGroupBox" name="groupBox_16">
          <property name="title">
           <string>Port</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_19">
           <item>
            <layout class="QFormLayout" name="formLayout_9">
             <item row="0" column="0">
              <widget class="QLabel" name="label_25">
               <property name="text">
                <string>ADC min:</string>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
              <widget class="QLineEdit" name="portmin"/>
             </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_26">
               <property name="text">
                <string>ADC max:</string>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
              <widget class="QLineEdit" name="portmax"/>
             </item>
             <item row="2" column="0">
              <widget class="QLabel" name="label_27">
               <property name="text">
                <string>Magnitude:</string>
               </property>
              </widget>
             </item>
             <item row="2" column="1">
              <widget class="QLineEdit" name="portmag"/>
             </item>
             <item row="3" column="0">
              <widget class="QLabel" name="label_28">
               <property name="text">
                <string>Phase:</string>
               </property>
              </widget>
             </item>
             <item row="3" column="1">
              <widget class="QLineEdit" name="portphase"/>
             </item>
             <item row="4" column="0">
              <widget class="QLabel" name="label_13">
               <property name="text">
                <string>Referenced:</string>
               </property>
              </widget>
             </item>
             <item row="4" column="1">
              <widget class="QLineEdit" name="portreferenced"/>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox_15">
          <property name="title">
           <string>Reference</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_18">
           <item>
            <layout class="QFormLayout" name="formLayout_8">
             <item row="0" column="0">
              <widget class="QLabel" name="label_21">
               <property name="text">
                <string>ADC min:</string>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
              <widget class="QLineEdit" name="refmin"/>
             </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_22">
               <property name="text">
                <string>ADC max:</string>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
              <widget class="QLineEdit" name="refmax"/>
             </item>
             <item row="2" column="0">
              <widget class="QLabel" name="label_23">
               <property name="text">
                <string>Magnitude:</string>
               </property>
              </widget>
             </item>
             <item row="2" column="1">
              <widget class="QLineEdit" name="refmag"/>
             </item>
             <item row="3" column="0">
              <widget class="QLabel" name="label_24">
               <property name="text">
                <string>Phase:</string>
               </property>
              </widget>
             </item>
             <item row="3" column="1">
              <widget class="QLineEdit" name="refphase"/>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
           <string>eCal</string>
          </property>
          <layout class="QFormLayout" name="formLayout_2">
           <item row="0" column="0">
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Temperature:</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
            <widget class="SIUnitEdit" name="eCalTemp">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>Heater Power:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="SIUnitEdit" name="eCalPower">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SIUnitEdit</class>
   <extends>QLineEdit</extends>
   <header>CustomWidgets/siunitedit.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
